tests/calico_testcases/example_policies/testcase21-with_k8s/testcase21-Calico-allowAll-globalNetworkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase21-Calico-allowAll
spec:
  order: 1000
  types:
  - Ingress
  - Egress
  egress:
  - action: Allow
  ingress:
  - action: Allow
