tests/calico_testcases/example_policies/testcase21-with_k8s/testcase21-Calico-allowSpecific-kube-system.yaml

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase21-allow-allowFirst-defaultAllow
  namespace: kube-system
spec:
  order: 10
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: has(tier)
  - action: Deny
  egress:
  - action: Allow
    destination:
      selector: all()
  - action: Deny
