tests/calico_testcases/example_policies/testcase21-with_k8s/testcase21-k8s-emptyPodSelector.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testcase21-k8s-empty-podselector
  namespace: default 
spec:
  podSelector:
    matchLabels:
      app: no_exist_app_label
  policyTypes:
    - Ingress
    - Egress
